--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -64,7 +64,7 @@
                     class="header__menu-item header__menu-item_talk">Обсудить новости</a>
                 <a
                     href="{{SITEURL}}/pages/donate.html"
-                    class="header__menu-item header__menu-item_donate {% if output_file == 'pages/donate.html' %} header__menu-item_active {% endif %}">Поддержать</a>
+                    class="header__menu-item header__menu-item_donate {% if output_file == 'pages/donate.html' %} header__menu-item_active {% endif %}">Поддержать $</a>
             </nav>
         </header>
 
