Addded tags list

--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -92,9 +92,6 @@
                             <a href="http://podster.fm/user/gikme" class="sidebar__subscribe-link sidebar__subscribe-link_podster link">gik.me на podster.ru</a>
                         </li>
                         <li class="sidebar__subscribe-item">
-                            <a href="http://yahujik.podfm.ru/gikme/" class="sidebar__subscribe-link sidebar__subscribe-link_podfm link">gik.me на podfm.ru</a>
-                        </li>
-                        <li class="sidebar__subscribe-item">
                             <a href="https://itunes.apple.com/ru/podcast?id=597105136" class="sidebar__subscribe-link sidebar__subscribe-link_itunes link">gik.me в iTunes</a>
                         </li>
                         <li class="sidebar__subscribe-item">
@@ -144,6 +141,11 @@
                             <a
                                 href="{{SITEURL}}/archives.html"
                                 class="sidebar__more-link {% if output_file == 'archives.html' %} sidebar__more-link_active {% endif %}">Архив</a>
+                        </li>
+                        <li class="sidebar__more-item">
+                            <a
+                                href="{{SITEURL}}/tags.html"
+                                class="sidebar__more-link {% if output_file == 'tags.html' %} sidebar__more-link_active {% endif %}">Теги</a>
                         </li>
                         <li class="sidebar__more-item">
                             <a
