--- a/site/themes/gikme-light/templates/tags.html
+++ b/site/themes/gikme-light/templates/tags.html
@@ -15,7 +15,7 @@
 {% block content %}
                 <section class="article">
                     <header class="article__header">
-                        <h1 class="article__title">Архив</h1>
+                        <h1 class="article__title">Теги</h1>
                     </header>
                     <div class="article__content">
                         <div class="post archives">
