--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -155,6 +155,11 @@
                         </li>
                         <li class="sidebar__more-item">
                             <a
+                                href="{{SITEURL}}/pages/tools.html"
+                                class="sidebar__more-link {% if output_file == 'tools.html' %} sidebar__more-link_active {% endif %}">Полезняк</a>
+                        </li>
+                        <li class="sidebar__more-item">
+                            <a
                                 href="{{SITEURL}}/pages/how-to-record.html"
                                 class="sidebar__more-link {% if output_file == 'pages/how-to-record.html' %} sidebar__more-link_active {% endif %}">Гостям</a>
                         </li>
