--- a/site/themes/gikme-light/src/stylus/header/header.styl
+++ b/site/themes/gikme-light/src/stylus/header/header.styl
@@ -70,6 +70,9 @@
             font-size content-fs
             background transparent
 
+            &_single
+                margin 0
+
             &_talk
                 border 1px solid
                 border-radius 5px
@@ -105,4 +108,3 @@
                 border 1px solid border-color
                 border-radius 5px
                 color font-color
-                
