--- a/site/themes/gikme-light/src/stylus/vars.styl
+++ b/site/themes/gikme-light/src/stylus/vars.styl
@@ -11,6 +11,7 @@ meta-color = #a4a6a8
 font-color = #3a3e41
 border-color = #cccbc9
 support-color = #20791b
+bg-support-color = #bdedba
 
 header-fs = 24px
 subheader-fs = 18px
