--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -162,6 +162,11 @@
                                 href="{{SITEURL}}/pages/how-to-record.html"
                                 class="sidebar__more-link {% if output_file == 'pages/how-to-record.html' %} sidebar__more-link_active {% endif %}">Гостям</a>
                         </li>
+                        <li class="sidebar__more-item">
+                            <a
+                                href="{{SITEURL}}/pages/about.html"
+                                class="sidebar__more-link {% if output_file == 'pages/about.html' %} sidebar__more-link_active {% endif %}">О нас</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="sidebar__item">
