Fix pages again

--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -60,7 +60,7 @@
             </nav>
             <nav class="header__menu header__menu_right">
                 <a
-                    href="https://telegram.me/joinchat/AA0gXD0Fd1NHj8pEMonoPw"
+                    href="{{SITEURL}}/pages/theme.html"
                     class="header__menu-item header__menu-item_talk">Предложить новости</a>
                 <a
                     href="{{SITEURL}}/pages/donate.html"
@@ -151,11 +151,6 @@
                             <a
                                 href="{{SITEURL}}/search.html"
                                 class="sidebar__more-link {% if output_file == 'pages/search.html' %} sidebar__more-link_active {% endif %}">Поиск</a>
-                        </li>
-                        <li class="sidebar__more-item">
-                            <a
-                                href="{{SITEURL}}/pages/tools.html"
-                                class="sidebar__more-link {% if output_file == 'pages/tools.html' %} sidebar__more-link_active {% endif %}">Полезняк</a>
                         </li>
                         <li class="sidebar__more-item">
                             <a
