--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -14,7 +14,7 @@
                 <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} полный Atom Feed" />
             {% endif %}
             {% if FEED_ALL_RSS %} #}
-                <link href="http://feeds.feedburner.com/gikmeblog" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} полный RSS Feed" />
+                <link href="/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} полный RSS Feed" />
             {# {% endif %}
             {% if FEED_ATOM %}
                 <link href="{{ FEED_DOMAIN }}/{{ FEED_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Atom Feed" />
@@ -24,9 +24,9 @@
             {% endif %} #}
             {% if CATEGORY_FEED_RSS and category %}
                 {% if category|safe == 'podcast' %}
-                    <link href="http://feeds.feedburner.com/gikme" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed раздела &quot;{{category|cat_name}}&quot;" />
+                    <link href="/feeds/podcast.rss.xml" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed раздела &quot;{{category|cat_name}}&quot;" />
                 {% elif category|safe == 'nedocast' %}
-                    <link href="http://feeds.feedburner.com/nedocast" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed раздела &quot;{{category|cat_name}}&quot;" />
+                    <link href="/feeds/nedodcast.rss.xml" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed раздела &quot;{{category|cat_name}}&quot;" />
                 {% else %}
                     <link href="{{ FEED_DOMAIN }}/{{ CATEGORY_FEED_RSS|format(category.slug) }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed раздела &quot;{{category|cat_name}}&quot;" />
                 {% endif %}
@@ -80,13 +80,13 @@
                     <h4 class="sidebar__title">Подписка</h4>
                     <ul class="sidebar__subscribe">
                         <li class="sidebar__subscribe-item">
-                            <a href="http://feeds.feedburner.com/gikme" class="sidebar__subscribe-link sidebar__subscribe-link_rss link">RSS подкаста<sup>18+</sup></a>
+                            <a href="h/feeds/podcast.rss.xml" class="sidebar__subscribe-link sidebar__subscribe-link_rss link">RSS подкаста<sup>18+</sup></a>
                         </li>
                         <li class="sidebar__subscribe-item">
-                            <a href="http://feeds.feedburner.com/nedocast" class="sidebar__subscribe-link sidebar__subscribe-link_rss-extra link">RSS недокаста<sup>18+</sup></a>
+                            <a href="/feeds/nedocast.rss.xml" class="sidebar__subscribe-link sidebar__subscribe-link_rss-extra link">RSS недокаста<sup>18+</sup></a>
                         </li>
                         <li class="sidebar__subscribe-item">
-                            <a href="http://feeds.feedburner.com/gikmeblog" class="sidebar__subscribe-link sidebar__subscribe-link_rss-extra link">RSS (всё подряд)<sup>18+</sup></a>
+                            <a href="/feeds/all.rss.xml" class="sidebar__subscribe-link sidebar__subscribe-link_rss-extra link">RSS (всё подряд)<sup>18+</sup></a>
                         </li>
                         <li class="sidebar__subscribe-item">
                             <a href="http://podster.fm/user/gikme" class="sidebar__subscribe-link sidebar__subscribe-link_podster link">gik.me на podster.ru</a>
@@ -224,9 +224,9 @@
         </div>
 
         <footer class="footer">
-            <a href="http://feeds.feedburner.com/gikme" class="footer__link link">RSS подкаста <strong>[18+]</strong></a>
-            <a href="http://feeds.feedburner.com/nedocast" class="footer__link link">RSS недокаста <strong>[18+]</strong></a>
-            <a href="http://feeds.feedburner.com/gikmeblog" class="footer__link link">RSS (всё подряд) <strong>[18+]</strong></a>
+            <a href="/feeds/podcast.rss.xml" class="footer__link link">RSS подкаста <strong>[18+]</strong></a>
+            <a href="/feeds/nedocast.rss.xml" class="footer__link link">RSS недокаста <strong>[18+]</strong></a>
+            <a href="/feeds/all.rss.xml" class="footer__link link">RSS (всё подряд) <strong>[18+]</strong></a>
         </footer>
         {% if DISQUS_SITENAME %}
             <script type="text/javascript">
